# binvad

./: .gitignore  CMakeLists.txt  README.md  example_run.sh
scripts/: e2e_vad_chunk_copy.sh  example_run.sh
src/: main.cpp
